# QT6

1_First_Application/: CMakeLists.txt  main.cpp
2-Picture_Task/: CMakeLists.txt  Main.qml  README.md  main.cpp  resource.qrc  vid.webm
3-CAPS/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  Main.qml  main.cpp
test_yocto/: CMakeLists.txt  Main.qml  main.cpp
